--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 #hello.springmvc ???? ? ?? ?? ?? ??
 # ???? ??? ?? = trace, ?? = debug ,?? = info ? ??.
-logging.level.hello.springmvc=info
+logging.level.hello.springmvc=debug
